# mulivendBook

./: Makefile  README.md  docker-compose.yml
frontend/customer-portal/: app.vue  nuxt.config.ts  package.json
frontend/customer-portal/assets/css/: main.css
frontend/customer-portal/components/layout/: Footer.vue  Header.vue
frontend/customer-portal/components/ui/: LanguageSwitcher.vue  ProductCard.vue  ProductGrid.vue  ProductReviews.vue  VendorCard.vue
frontend/customer-portal/layouts/: default.vue
frontend/customer-portal/locales/: ar.json  en.json  fr.json
frontend/customer-portal/middleware/: auth.ts
frontend/customer-portal/pages/: cart.vue  checkout.vue  index.vue
frontend/customer-portal/pages/auth/: login.vue  register.vue
frontend/customer-portal/pages/orders/: index.vue
frontend/customer-portal/pages/products/: [id].vue
frontend/customer-portal/pages/vendors/: [id].vue  index.vue
frontend/customer-portal/plugins/: init.client.ts
frontend/customer-portal/stores/: auth.ts  cart.ts
k8s/: api-gateway.yaml  auth-service.yaml  catalog-service.yaml  infrastructure.yaml  namespace.yaml  order-service.yaml  secrets.yaml  vendor-service.yaml
scripts/: init-db.sql  run-seeds.sh  seed-data.sql  seed-orders-reviews.sql  seed-products.sql
services/auth-service/: Cargo.toml  Dockerfile
services/auth-service/src/: auth.rs  config.rs  database.rs  errors.rs  main.rs  middleware.rs  models.rs
services/auth-service/src/handlers/: admin.rs  api_keys.rs  auth.rs  metrics.rs  mfa.rs  mod.rs  users.rs
services/auth-service/src/services/: user_service.rs
services/catalog-service/: Cargo.toml  Dockerfile
services/catalog-service/src/: config.rs  database.rs  errors.rs  main.rs  models.rs  search.rs  storage.rs
services/catalog-service/src/handlers/: categories.rs  health.rs  metrics.rs  mod.rs  products.rs  reviews.rs  search.rs
services/catalog-service/src/middleware/: auth.rs
services/catalog-service/src/services/: mod.rs
services/order-service/: Dockerfile  mix.exs
services/order-service/config/: config.exs  dev.exs  prod.exs
services/order-service/lib/order_service/: application.ex  orders.ex
services/order-service/lib/order_service_web/: endpoint.ex  router.ex
services/vendor-service/: Dockerfile  go.mod  go.sum  main.go
(+18 files in other folders)
