[package]
name = "catalog-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
config = "0.14"
dotenv = "0.15"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.0"
validator = { version = "0.18", features = ["derive"] }
futures = "0.3"
elasticsearch = "8.5"
tantivy = "0.22"
image = "0.24"
reqwest = { version = "0.11", features = ["json", "multipart"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
